simple-echo/scotty-service.yaml
kind: Service
apiVersion: v1
metadata: 
  name: scotty-service
spec:
  selector:
    app: scotty-echo
  ports:
  - protocol: TCP
    port: 3000
  type: NodePort
