simple-echo/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    kubernetes.io/ingress.class: "tectonic"
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: scotty-service
              servicePort: 3000
